# Snake--WinAPI

./: CMakeLists.txt  README.txt
game/include/: gameLogic.h
game/src/: gameLogic.cpp
platform/include/: gameWindowBuffer.h  input.h
platform/src/: gameWindowBuffer.cpp  input.cpp  main.cpp
